feat(core): Add chat apis
