# server/router/v1/index.ts
@@ -8,6 +8,7 @@ import googleAuthGroup from "./googleAuthGroup";
 import reportGroup from "./reportGroup";
 import companyGroup from "./companyGroup";
 import bountyGroup from "./bountyGroup";
+import chatGroup from "./chatGroup";
 
 const router = Router();
 
@@ -23,5 +24,6 @@ router.use("/auth/google", googleAuthGroup);
 router.use("/report", reportGroup);
 router.use("/company", companyGroup);
 router.use("/bounties", bountyGroup);
+router.use("/chat", chatGroup);
 
 export default router;
